--- a/app/src/main/res/layout/activity_newitem.xml
+++ b/app/src/main/res/layout/activity_newitem.xml
@@ -236,7 +236,7 @@
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Detect" />
+                android:text="Det\nect" />
         </LinearLayout>
 
         <EditText
